--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Stormy OLED Glow</title>
+  <title>Stormy OLED Fade</title>
   <style>
     html, body {
       height: 100%;
@@ -14,11 +14,10 @@
     .gradient-background {
       width: 100vw;
       height: 100vh;
-      background: linear-gradient(45deg,
-        #000000, #0a0a0a, #05030b, #1a0330, #000000,
-        #0b0d22, #000000, #0f0c2a, #2b0f47, #000000);
-      background-size: 800% 800%;
-      animation: gradient-animation 180s ease infinite;
+      background: linear-gradient(135deg,
+        #000000, #000000, #0a0a18, #0d0e22, #0a0a18, #000000, #2b0f47, #000000);
+      background-size: 1200% 1200%;
+      animation: gradient-animation 240s ease-in-out infinite;
     }
     @keyframes gradient-animation {
       0% { background-position: 0% 50%; }
